--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div id="half" class="px-3 py-2 rounded-3 btn-type">Half</div>
 			</div>
 			<canvas id="myCanvas" width="500" height="500" style="border-radius: 1rem; background-color: rgba(108, 200, 231, 0.2); box-shadow: 3px 3px 3px 0px rgb(24, 48, 56)"></canvas>
-			<img src="/logo.png" alt="." width="3000" height="3000" style="width: 130px; height: 130px; position: absolute; bottom: 0rem; right: 0rem; transform: translate(30%, -10%)" />
+			<img src="./logo.png" alt="." width="3000" height="3000" style="width: 130px; height: 130px; position: absolute; bottom: 0rem; right: 0rem; transform: translate(30%, -10%)" />
 		</div>
 		<script src="script.js"></script>
 	</body>
